[project]
name = "nonebot2-store-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lancercmd", email = "lancercmd@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
